// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppointmentTile should match snapshot when HIGHTLIGHT false 1`] = `
<div
  className="card appointment-tile "
>
  <div
    className="card-content"
  >
    <div
      className="location-marker"
    >
      <FaMapMarkerAlt />
      <h5
        className="title is-5"
      >
        <b>
          mockHeading
        </b>
      </h5>
    </div>
    <div>
      <div>
        City
      </div>
      <div>
        Country
      </div>
      <div>
        PostalCode
      </div>
      <div>
        "contactPerson"
      </div>
    </div>
  </div>
</div>
`;

exports[`AppointmentTile should match snapshot when HIGHTLIGHT true 1`] = `
<div
  className="card appointment-tile hightlight"
>
  <div
    className="card-content"
  >
    <div
      className="location-marker"
    >
      <FaMapMarkerAlt />
      <h5
        className="title is-5"
      >
        <b>
          mockHeading
        </b>
      </h5>
    </div>
    <div>
      <div>
        City
      </div>
      <div>
        Country
      </div>
      <div>
        PostalCode
      </div>
      <div>
        "contactPerson"
      </div>
    </div>
  </div>
</div>
`;
